--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,1 +1,7 @@
+$body-bg: #7f8c8d;
+$navbar-default-bg:#2c3e50;
+$navbar-default-link-color:white;
+$brand-primary:#bdc3c7;
+$jumbotron-bg:#2c3e50;
+$jumbotron-color:white;
 @import 'bootstrap';
