--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,7 +1,20 @@
-$body-bg: #7f8c8d;
-$navbar-default-bg:#2c3e50;
-$navbar-default-link-color:white;
-$brand-primary:#bdc3c7;
-$jumbotron-bg:#2c3e50;
-$jumbotron-color:white;
+@import url(http://fonts.googleapis.com/css?family=Lato);
+
+$body-bg: #bdc3c7;
+$font-family-sans-serif: 'Lato' "Helvetica Neue", Helvetica, Arial, sans-serif;
+$navbar-height:  45px;
+$navbar-default-bg:#ecf0f1;
+$navbar-default-link-color:#c0392b;
+$brand-primary:#c0392b;
+$jumbotron-bg:#ecf0f1;
+$jumbotron-color:Black;
+
 @import 'bootstrap';
+
+.center{
+	text-align: center;
+}
+
+.navbar-brand{
+	font-weight:bold;
+}
