--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,6 +18,11 @@
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "About Us", about_path %></li>
 
+        <% if user_signed_in? %>
+          <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
+        <%else%>
+          <%= link_to "Sign in", new_user_session_path,  class: "btn btn-info btn-lg"%>
+        <%end%>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
