--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,7 +21,7 @@
         <% if user_signed_in? %>
           <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
         <%else%>
-          <%= link_to "Sign in", new_user_session_path,  class: "btn btn-info"%>
+          <li><%= link_to "Sign in", new_user_session_path,  class: "btn btn-info btn-lg"%></li>
         <%end%>
       </ul>
     </div><!-- /.navbar-collapse -->
