customized devise for users

--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -4,8 +4,10 @@
   <%= devise_error_messages! %>
 
   <div class="field">
+  	<div class="form-group">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true %>
+</div>
   </div>
 
   <div class="actions">
